# evil-things

./: README.md  files.txt
cnc/: .env  .env.prod  composer.json
cnc/migrations/: Version20240908083353.php
cnc/src/Controller/: ClientController.php
cnc/src/Entity/: ClientEntity.php
cnc/src/Enum/: CommandType.php
cnc/src/Model/Dto/: ClientRegistrationDto.php  CommandRequestDto.php
cnc/src/Repository/: ClientEntityRepository.php
cnc/src/Security/: ClientAuthenticator.php
cnc/src/Service/: ClientService.php  CommandService.php
evil-c/: CMakeLists.txt  main.c  version.rc
evil-c/features/: clipboard.c  clipboard.h  feature.h  keyboard.c  keyboard.h  mouse.c  mouse.h
evil-c/utils/: logger.c  logger.h  scheduler.c  scheduler.h
evil-rust/: Cargo.toml
evil-rust/src/: main.rs  module.rs
evil-rust/src/clipboard/: mod.rs  tampering.rs
evil-rust/src/config/: mod.rs
evil-rust/src/mouse/: mod.rs
evil-rust/src/syssound/: mod.rs
evil-rust/src/wallpaper/: mod.rs
powershell/: common.ps1  init.ps1  starter.ps1  wallpaper.ps1
