[package]
name = "evil-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
#tokio = { version = "1.33.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["blocking"] }
log = "0.4.20"
simple_logger = "5.0.0"
toml = "0.8.2"
serde = { version = "1.0.189", features = ["derive"] }
winreg = "0.52.0"
is_elevated = "0.1.2"
winapi = { version = "0.3.9", features = ["winuser"] }
clipboard = "0.5.0"

[profile.release]
opt-level = 3          # Maximum optimization
debug = false          # No debug information
lto = true             # Enable Link Time Optimization
codegen-units = 1      # Single codegen unit for better optimization
panic = 'abort'        # Abort on panic
incremental = false    # Disable incremental compilation
overflow-checks = false # Disable overflow checks
strip = true           # Strip symbols from the binary